Stopped navbar from wrapping onto two lines, and got rid of margin-right negative margin.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
-#navbar{
-	background-color: black
+.navbar .nav .li{
+	white-space: nowrap;
+}
+
+.navbar-header {
+	float: left;
+}
+
+.navbar-nav {
+	float: right;
 }
 
 #search{
@@ -20,4 +28,45 @@
 
 #footer{
 	background-color: gray
+}
+
+.navbar-right {
+	margin-right: 0 !important;
+}
+
+@media (max-width: 300px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+		top: 0;
+		border-width: 0 0 1px;
+	}
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+		margin-top: 7.5px;
+	}
+	.navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+  		display:block !important;
+	}
 }
